Fix #77 (#87)
Fix #77

Co-authored-by: Clément Bareth <clement.bareth@web-drone.fr>